# parallel-code

./: .gitignore  .prettierignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  dev.sh  eslint.config.js  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docker/: Dockerfile
docs/: electron-migration-evaluation.md
docs/plans/: 2026-02-20-electron-migration.md  2026-02-23-open-in-editor.md
electron/: main.ts  preload.cjs  preload.ts  tsconfig.json  vite.config.electron.ts
electron/ipc/: agents.ts  channels.ts  git.ts  persistence.ts  plans.ts  pty.test.ts  pty.ts  register.test.ts  register.ts  setup.ts  tasks.ts
electron/shims/: tauri-api-core.ts  tauri-api-dpi.ts  tauri-api-window.ts  tauri-plugin-dialog.ts  tauri-plugin-opener.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  persistence.rs  shell.rs  state.rs
src-tauri/src/agents/: types.rs
src-tauri/src/git/: mod.rs  types.rs
src-tauri/src/pty/: mod.rs  types.rs
src-tauri/src/tasks/: mod.rs  types.rs
src/arena/: HistoryScreen.tsx  ResultsScreen.tsx
src/components/: ChangedFilesList.tsx  CloseTaskDialog.tsx  CommandListEditor.tsx  ConfirmDialog.tsx  ConnectPhoneModal.tsx  Dialog.tsx  DiffViewerDialog.tsx  EditProjectDialog.tsx  EditableText.tsx  HelpDialog.tsx  IconButton.tsx  InfoBar.tsx  MergeDialog.tsx  MonacoDiffEditor.tsx  NewTaskDialog.tsx  NewTaskPlaceholder.tsx  PathSelector.tsx  PlanViewerDialog.tsx  PromptInput.tsx  PushDialog.tsx  ResizablePanel.tsx  Sidebar.tsx  (+21 more)
(+32 files in other folders)
