[package]
name = "parallel-code"
version = "0.1.0"
description = "Parallel Code"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parallel_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.22"
thiserror = "2"
tauri-plugin-dialog = "2.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

